--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,16 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
     <body>
+    <header>
+        <div>
+            <span>Total:</span>
+            <span id="offer__total">0.0</span>
+        </div>
+        <div>
+            <span>Total:</span>
+            <span id="offer__items-count">0.0</span>
+        </div>
+    </header>
         <h1>My Ecommerce</h1>
         <ul id="productList"></ul>
         <p>src/main/resources/static/index.html</p>
