--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,6 +13,12 @@
             <span>Total:</span>
             <span id="offer__items-count">0.0</span>
         </div>
+        <form>
+            <input name="first-name" placeholder="John"/>
+            <input name="second-name" placeholder="Doe"/>
+            <input name="email" type="email" placeholder="john.doe@example.com">
+            <button type="submmit">Accept offer</button>
+        </form>
     </header>
         <h1>My Ecommerce</h1>
         <ul id="productList"></ul>
